# Hamming-Code

./: .gitignore  C++20_CONFIGURATION.md  CMakeLists.txt  DIRECTORY_ORGANIZATION.md  ERROR_SIMULATOR_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Practice_3.cpp  Problem _1.cpp  Problem_2.cpp  README.md  error_simulation_example.cpp
benchmarks/: benchmark_codes.cpp  ber_analysis.cpp
docs/: API_REFERENCE.md  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  EXAMPLES.md
examples/: bch_demo.cpp  ber_analysis_test.cpp
include/ecc/: bch_code.hpp  galois_field.hpp  hamming_code.hpp  performance_analyzer.hpp  reed_solomon.hpp
src/: bch_code.cpp  error_simulator.cpp  galois_field.cpp  hamming_code.cpp  ldpc_code.cpp  main.cpp  matrix_operations.cpp  performance_analyzer.cpp  reed_solomon.cpp  simple_main.cpp  turbo_code.cpp
test/: test_error_simulator.cpp  test_galois_complete.cpp  test_galois_minimal.cpp  test_galois_simple.cpp  test_minimal.cpp  test_simple_build.cpp  test_standalone.cpp
tests/: test_bch.cpp  test_hamming.cpp  test_main.cpp  test_performance.cpp  test_reed_solomon.cpp
